examples/test/testpolicy18870.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18870
  namespace: namespace376
spec:
  podSelector:
    matchLabels:
      key7: value47
      key8: value26
      key0: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value48
      podSelector:
        matchLabels:
          key22: value7
